@@ -1564,3 +1564,16 @@ POFILTER_REFERENCES=References:
 # HTML-Filter
 HTMLFILTER_TAG=Tag:
 HTMLFILTER_ATTRIBUTE=Attribute:
+
+#Console output:
+CONSOLE_INITIALIZING=Initializing
+CONSOLE_TAGVALIDATION_FAIL=Tag validation failed
+CONSOLE_TRANSLATING=Translating Project
+CONSOLE_FINISHED=Finished
+CONSOLE_VALIDATING_TAGS=Validating tags
+CONSOLE_TAGVALIDATION_ABORT=Aborted.
+CONSOLE_CREATE_PSEUDOTMX=Create pseudo-translate TMX
+CONSOLE_TRANSLATED_FILES_LOC_UNDEFINED=Translated files location not defined
+CONSOLE_ALIGN_AGAINST=Align project against {0}
+CONSOLE_LOADING_PROJECT=Loading Project
+CONSOLE_PROJECT_NOT_VERIFIED=The project cannot be verified
